--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.2"
